# Haviour

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake
src/: app.cpp  app.h  logger.cpp  logger.h  main.cpp  utils.h
src/hkx/: hkclass.h  hkclass.inl  hkutils.h  hkxfile.cpp  hkxfile.h  linkedmanager.cpp  linkedmanager.h
src/ui/: charedit.cpp  charedit.h  classes.cpp  classes.h  classinterface.cpp  classinterface.h  columnview.cpp  columnview.h  global.cpp  global.h  listview.cpp  listview.h  macros.cpp  macros.h  mainwindow.cpp  mainwindow.h  propedit.cpp  propedit.h  varedit.cpp  varedit.h  varlist.cpp  varlist.h  widgets.cpp  widgets.h
